k8s/worker-cleaner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-cleaner-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-cleaner
  template:
    metadata:
      labels:
        app: worker-cleaner
    spec:
      containers:
      - name: worker-cleaner
        image: imagepipe-worker-cleaner
        command: ["celery"]
        args: ["-A", "services.cleaner.cleaner_worker", "worker", "-n", "cleaner@%h", "-Q", "cleaner_queue", "--loglevel=info", "--pool=solo"]
        volumeMounts:
        - name: uploads
          mountPath: /app/uploads
        resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
      - name: uploads
        hostPath:
          path: /app/uploads
          type: Directory
