k8s/worker-ocr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-ocr-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-ocr
  template:
    metadata:
      labels:
        app: worker-ocr
    spec:
      containers:
      - name: worker-ocr
        image: imagepipe-worker-ocr
        imagePullPolicy: Never
        command: ["celery"]
        args: ["-A", "services.ocr.ocr_worker", "worker", "-n", "ocr@%h", "-Q", "ocr_queue", "--loglevel=info", "--pool=solo"]
        volumeMounts:
        - name: uploads
          mountPath: /app/uploads
        resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
      - name: uploads
        hostPath:
          path: /app/uploads
          type: DirectoryOrCreate
