k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: imagepipe-gateway  
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: upload
              mountPath: /app/upload
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: upload
          hostPath:
            path: /app/upload
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30000 # http://localhost:30000
